tests/unit/default/syntax-error/015-create-table-parens.e.t
---- IN ----
+%table(
---- OUT ----
---- ERR ----
syntax: expected <columns-definitions-end> after `+%table(` instead of EOL at position 8 - at line 1
---- EXIT ----
1
